--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="jcj23xfb">
+    <link rel="stylesheet" href="styles.css">
     <title>Academi Gymraeg | Log In</title>
 </head>
 <body>
