--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Add New User</h1>
 
-    <div id="logInGroup">
+    <div id="addUserGroup">
         <form th:action="@{/addUser}" method="post">
             <label for="forename">Forename: </label>
             <input type="text" name="forename" id="forename" placeholder="Forename" required><br>
