--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -17,7 +17,7 @@
 		<a href="/test" id="nav-link-test">Take Test</a>
 		<a href="/results" id="nav-link-results">Results</a>
 		<a href="/nounsadmin" id="nav-link-nouns">Nouns</a>
-		<a href="/useradmin" id="nav-link-users">Users</a>		
+		<a href="/addUser" id="nav-link-users">Users</a>		
 	</div>
 	
 	<div id="container">
