--- a/src/main/resources/templates/nounedit.html
+++ b/src/main/resources/templates/nounedit.html
@@ -10,7 +10,8 @@
     <h1>Noun Admin</h1>
 	
 	<h2>Edit Noun</h2>
-	<form th:action="@{/editnoun}" method="POST" th:object="${noun}">
+	<form th:action="@{/noun/editnoun}" method="POST" th:object="${noun}">
+	<input type="hidden" id="id" th:field="*{id}"><br>
 		<div>
 		<label for="englishnoun">English noun: </label>
 		<input type="text" id="englishnoun" th:field="*{englishNoun}"><br>
