--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -17,6 +17,7 @@
 		<a href="/test" id="nav-link-test">Take Test</a>
 		<a href="/results" id="nav-link-results">Results</a>
 		<a href="/nounsadmin" id="nav-link-nouns">Nouns</a>
+		<a href="/viewusers" id="nav-link-viewusers">View Users</a>
     <a href="/noun" id="nav-link-nouns">Noun Admin</a>
 		<a href="/addUser" id="nav-link-users">Users</a>		
 	</div>
