--- a/src/main/resources/templates/add-user.html
+++ b/src/main/resources/templates/add-user.html
@@ -4,27 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="grs22lkc">
-    <title>Academi Gymraeg | Add New User</title>
+	<link href="../css/styles.css" th:href="@{/css/styles.css}" rel="stylesheet" />
+    <title>Academi Gymraeg | Add new user</title>
 </head>
 <body>
-    <h1>Add New User</h1>
-
-     <div id="addUserGroup">
-        <form th:action="@{/addUser}" method="post">
-            <label for="forename">Forename: </label>
-            <input type="text" name="forename" id="forename" placeholder="Forename" required><br>
-            <label for="username">Email: </label>
-            <input type="text" name="username" id="username" placeholder="Email" required><br>
-
-            <label for="password">Password: </label>
-            <input type="password" name="password" id="password" placeholder="Password" required><br>
-
-            <button type="submit">Register User</button>
-        </form>
-
-
-    </div>
-
+    <div id="header">
+	    <img id="logo" th:src="@{/images/logo.png}" alt="Academi Gymraeg Logo">
+	    <a href="/logout" id="logout">Log Out </a>
+	</div>
+	<div id="nav-bar">
+		<a href="/home" id="nav-link-home">Welcome</a>
+		<a href="/test" id="nav-link-test">Take Test</a>
+		<a href="/results" id="nav-link-results">Results</a>
+		<a href="/nounsadmin" id="nav-link-nouns">Nouns</a>
+    	<a href="/noun" id="nav-link-nouns">Noun Admin</a>
+		<a href="/addUser" id="nav-link-users" th:style="'color: red; background-color: white'">Users</a>		
+	</div>
+	
+	<div id="container1">
+		<div id="add-user-container">
+	
+		    <h1>Add New User</h1>
+		
+		     <div id="addUserGroup">
+		        <form th:action="@{/addUser}" method="post">
+		            <label for="forename">Forename: </label>
+		            <input type="text" name="forename" id="forename" placeholder="Forename" required><br>
+		            <label for="username">Email: </label>
+		            <input type="text" name="username" id="username" placeholder="Email" required><br>
+										
+					<label>Select user role(s):</label>
+					<input type="checkbox" id="admin" name="admin" value="True">Administrator <input type="checkbox" id="instructor" name="instructor" value="True"> Instructor<br>
+					
+		            <label for="password">Password: </label>
+		            <input type="password" name="password" id="password" placeholder="Password" required><br>
+		
+		            <button type="submit">Register User</button>
+		        </form>
+		
+		
+		    </div>
+		</div>
+	</div>
 
 </body>
 </html>
