--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -20,6 +20,7 @@
 		<a href="/viewusers" id="nav-link-viewusers">View Users</a>
     <a href="/noun" id="nav-link-nouns">Noun Admin</a>
 		<a href="/addUser" id="nav-link-users">Users</a>		
+		<a href="/viewResults" id="nav-link-users">View Results</a>	
 	</div>
 	
 	<div id="container">
