--- a/src/main/resources/templates/viewusers.html
+++ b/src/main/resources/templates/viewusers.html
@@ -7,7 +7,7 @@
 <title>Academi Gymraeg | View Users</title>
 </head>
 <body>
-	<h2>All Nouns</h2>
+	<h2>All Users</h2>
 
 	<span style="color: green">
 		<th:block th:text="${editconfirmationmessage} ?: ''"></th:block>			
