--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,12 +15,11 @@
 	<div id="nav-bar">
 		<a href="/home" id="nav-link-home" th:style="'color: red; background-color: white'">Welcome</a>
 		<a href="/test" id="nav-link-test">Take Test</a>
-		<a href="/results" id="nav-link-results">Results</a>
-		<a href="/nounsadmin" id="nav-link-nouns">Nouns</a>
+		<a href="/viewResults" id="nav-link-results">View Results</a>
 		<a href="/viewusers" id="nav-link-viewusers">View Users</a>
-    <a href="/noun" id="nav-link-nouns">Noun Admin</a>
-		<a href="/addUser" id="nav-link-users">Users</a>		
-		<a href="/viewResults" id="nav-link-users">View Results</a>	
+    	<a href="/addUser" id="nav-link-users">User Admin</a>
+    	<a href="/noun" id="nav-link-nouns">Noun Admin</a>	
+
 	</div>
 	
 	<div id="container">
