--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,5 +1,7 @@
 /* Author: grs22lkc, cnb22xdk */
 
+/* GLOBAL CSS (NOT PAGE SPECIFIC) */
+
 body {
 	margin: 0px 0px 0px 0px;
 	font-family: Arial, Helvetica, sans-serif;
@@ -54,6 +56,64 @@ h2 {
 	
 }
 
+.table-header {
+	background-color: #d9e7ff;
+	padding: 5px 10px;
+}
+th {
+	padding: 8px 8px 8px 8px;
+}
+
+a.edit-button {
+	color: white;
+	background-color: green;
+	width: 100px;
+	height: auto;
+	font-size: 14px;
+	padding: 2px 6px 2px 6px;
+	text-decoration: none;
+	margin-right: 15px;
+}
+a.delete-button {
+	color: white;
+	background-color: red;
+	width: 100px;
+	height: auto;
+	font-size: 14px;
+	padding: 2px 6px 2px 6px;
+	text-decoration: none;
+}
+
+
+
+/* ERROR PAGE SPECIFIC CSS */
+
+#errorpage h1, h2, p {
+	width: 600px;
+}
+
+#errorpage h1 {
+	color: red;
+	font-size: 72px;
+	font-weight: bold;
+	margin-top: 50px;
+}
+
+#errorpage h2 {
+	color: red;
+	font-size: 40px;
+	font-weight: bold;
+}
+
+#errorpage p {
+	font-size: 20px;
+	margin-bottom: 50px;
+}
+
+
+
+/* WELCOME PAGE SPECIFIC CSS */
+
 #welcome-container, #error-container {
 	display: flex;
 	justify-content: space-around;
@@ -83,27 +143,8 @@ h2 {
 	text-decoration: none;
 }
 
-#errorpage h1, h2, p {
-	width: 600px;
-}
 
-#errorpage h1 {
-	color: red;
-	font-size: 72px;
-	font-weight: bold;
-	margin-top: 50px;
-}
-
-#errorpage h2 {
-	color: red;
-	font-size: 40px;
-	font-weight: bold;
-}
-
-#errorpage p {
-	font-size: 20px;
-	margin-bottom: 50px;
-}
+/* LOG IN PAGE SPECIFIC CSS */
 
 #logInGroup input {
 	margin-bottom: 14px;
@@ -114,3 +155,69 @@ h2 {
 	margin-bottom: 10px;
 	width: 300px;
 }
+
+
+/* NOUN ADMIN PAGE SPECIFIC CSS */
+
+#add-noun {
+	width: 250px;
+	border-style: solid;
+ 	border-width: 1px;
+ 	padding: 20px 20px;
+}
+#add-noun button {
+	background-color: green;
+	padding: 6px 25px;
+	color: white;
+	}
+#englishnoun {
+	margin-bottom: 8px;
+	}
+#all-nouns table {
+	width: 800px;
+	border-style: solid;
+ 	border-width: 1px;
+ 	
+}
+#all-nouns table tr:nth-child(even) {
+	background-color: #f2f2f2;
+	padding: 6px 10px;
+	}
+#all-nouns table th {
+	width: 200px;
+}
+
+/* USER ADMIN PAGE SPECIFIC CSS */
+#add-user-container {
+	width: 500px;
+	border-style: solid;
+ 	border-width: 1px;
+ 	padding: 20px 20px;
+}
+#add-user-container button {
+	background-color: green;
+	padding: 6px 25px;
+	color: white;
+	}
+	
+/* VIEW USERS PAGE SPECIFIC CSS */
+
+#view-users button {
+	background-color: green;
+	padding: 6px 25px;
+	color: white;
+	}
+
+#view-users table {
+	width: 800px;
+	border-style: solid;
+ 	border-width: 1px;
+ 	
+}
+#view-users table tr:nth-child(even) {
+	background-color: #f2f2f2;
+	padding: 6px 10px;
+	}
+#view-users table th {
+	width: 200px;
+}	
