--- a/src/main/resources/templates/nounadmin.html
+++ b/src/main/resources/templates/nounadmin.html
@@ -3,75 +3,94 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="author" content="ptg22svs">
+	<meta name="author" content="ptg22svs, grs22lkc">
+	<link href="../css/styles.css" th:href="@{/css/styles.css}" rel="stylesheet" />
     <title>Academi Gymraeg | Noun Admin</title>
 </head>
 <body>
-    <h1>Noun Admin</h1>
-	
-	<h2>Add a new Noun</h2>
-	<form th:action="@{/noun}" method="POST" th:object="${noun}">
-		<div>
-		<label for="englishnoun">English noun: </label>
-		<input type="text" id="englishnoun" th:field="*{englishNoun}"><br>
-		<th:block th:each="e : ${#fields.errors('englishNoun')}">
-			<span style="color: red"><th:block
-					th:text="${e}"></th:block></span>
-			<br />
-		</th:block>
-		<label for="welshnoun">Welsh noun: </label>
-		<input type="text" id="welshnoun" th:field="*{welshNoun}"><br>	
-		<th:block th:each="e : ${#fields.errors('welshNoun')}">
-			<span style="color: red"><th:block
-					th:text="${e}"></th:block></span>
-			<br />
-		</th:block>	
+	<div id="header">
+	    <img id="logo" th:src="@{/images/logo.png}" alt="Academi Gymraeg Logo">
+	    <a href="/logout" id="logout">Log Out </a>
+	</div>
+	<div id="nav-bar">
+		<a href="/home" id="nav-link-home">Welcome</a>
+		<a href="/test" id="nav-link-test">Take Test</a>
+		<a href="/viewResults" id="nav-link-results">View Results</a>
+		<a href="/viewusers" id="nav-link-viewusers">View Users</a>
+    	<a href="/addUser" id="nav-link-users">User Admin</a>
+    	<a href="/noun" id="nav-link-nouns" th:style="'color: red; background-color: white'">Noun Admin</a>
+		
+	</div>
+
+	<div id="container">
+	    <h1>Noun Admin</h1>
+		
+		<h2>Add a new Noun</h2>
+		<div id="add-noun">
+			<form th:action="@{/noun}" method="POST" th:object="${noun}">
+				<div>
+				<label for="englishnoun">English noun: </label>
+				<input type="text" id="englishnoun" th:field="*{englishNoun}"><br>
+				<th:block th:each="e : ${#fields.errors('englishNoun')}">
+					<span style="color: red"><th:block
+							th:text="${e}"></th:block></span>
+					<br />
+				</th:block>
+				<label for="welshnoun">Welsh noun: </label>
+				<input type="text" id="welshnoun" th:field="*{welshNoun}"><br>	
+				<th:block th:each="e : ${#fields.errors('welshNoun')}">
+					<span style="color: red"><th:block
+							th:text="${e}"></th:block></span>
+					<br />
+				</th:block>	
+				</div><br>
+				<div>
+				<th:block th:each="g : ${genders}">
+					<label th:text="${g}"></label>
+					<input type="radio" th:field="*{gender}" th:value="${g}"><br>
+					<th:block th:each="e : ${#fields.errors('gender')}">
+					<span style="color: red"><th:block
+							th:text="${e}"></th:block></span>
+					<br />
+				</th:block>
+				</th:block>
+				</div><br><br>
+				
+				<button type="submit">Create Noun</button>
+			</form>
+		</div>
+		
+		<span style="color: green">
+			<th:block th:text="${addconfirmationmessage} ?: ''"></th:block>
+			<th:block th:text="${editconfirmationmessage} ?: ''"></th:block>			
+		</span>
+				
+					
+		<br>
+		<h2>All Nouns</h2>
+		
+		<span style="color: green"><th:block th:text="${deleteconfirmationmessage} ?: ''"></th:block></span>
+		<div id="all-nouns">
+			<table>
+			 <tr class="table-header">
+	    		<th>English</th>
+	    		<th>Welsh</th>
+	    		<th>Gender</th>
+	    		<th>Action</th>
+	  		</tr>
+			<tr th:each="n : ${allnouns}">
+				<th th:text="${n.englishNoun}"></th>
+				<th th:text="${n.welshNoun}"></th>
+				<th th:text="${n.gender}"></th>
+				<th><a class="edit-button" th:href="@{noun/editnoun/{id}(id = ${n.id})}">EDIT</a>
+				<a class="delete-button" th:href="@{/noun/deletenoun/{id}(id = ${n.id})}" th:data-noun="'Are you sure you wish to delete the noun ' + ${n.toString()} + '?'" th:onclick="return confirm(this.getAttribute('data-noun')) ? true : false;">DELETE</a></th>
+			</tr>
+			</table>
 		</div><br>
 		<div>
-		<th:block th:each="g : ${genders}">
-			<label th:text="${g}"></label>
-			<input type="radio" th:field="*{gender}" th:value="${g}"><br>
-			<th:block th:each="e : ${#fields.errors('gender')}">
-			<span style="color: red"><th:block
-					th:text="${e}"></th:block></span>
-			<br />
-		</th:block>
-		</th:block>
-		</div><br><br>
-		
-		<button type="submit">Create Noun</button>
-	</form>
-	
-	<span style="color: green">
-		<th:block th:text="${addconfirmationmessage} ?: ''"></th:block>
-		<th:block th:text="${editconfirmationmessage} ?: ''"></th:block>			
-	</span>
-			
-				
-	<br>
-	<h2>All Nouns</h2>
-	<span style="color: green"><th:block th:text="${deleteconfirmationmessage} ?: ''"></th:block>
-			</span>
-	<div>
-		<table>
-		 <tr>
-    		<th>English</th>
-    		<th>Welsh</th>
-    		<th>Gender</th>
-    		<th>Action</th>
-  		</tr>
-		<tr th:each="n : ${allnouns}">
-			<th th:text="${n.englishNoun}"></th>
-			<th th:text="${n.welshNoun}"></th>
-			<th th:text="${n.gender}"></th>
-			<th><a th:href="@{noun/editnoun/{id}(id = ${n.id})}">EDIT</a>
-			<a th:href="@{/noun/deletenoun/{id}(id = ${n.id})}" th:data-noun="'Are you sure you wish to delete the noun ' + ${n.toString()} + '?'" th:onclick="return confirm(this.getAttribute('data-noun')) ? true : false;">DELETE</a></th>
-		</tr>
-		</table>
-	</div><br>
-	<div>
-		<a href="/home">Back></a>
-		<a href="/logout">Log Out </a>
+			<a href="/home">Back></a>
+			<a href="/logout">Log Out </a>
+		</div>
 	</div>
 </body>
 </html>
