--- a/src/main/resources/templates/viewresults.html
+++ b/src/main/resources/templates/viewresults.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="author" content="jcj23xfb">
+<meta name="author" content="jcj23xfb, grs22lkc">
 <link href="../css/styles.css" th:href="@{/css/styles.css}" rel="stylesheet" />
 <title>Academi Gymraeg | View Results</title>
 <style>
@@ -58,6 +58,21 @@
   </style>
 </head>
 <body>
+
+	<div id="header">
+	    <img id="logo" th:src="@{/images/logo.png}" alt="Academi Gymraeg Logo">
+	    <a href="/logout" id="logout">Log Out </a>
+	</div>
+	<div id="nav-bar">
+<a href="/home" id="nav-link-home">Welcome</a>
+		<a href="/test" id="nav-link-test">Take Test</a>
+		<a href="/viewResults" id="nav-link-results" th:style="'color: red; background-color: white'">View Results</a>
+		<a href="/viewusers" id="nav-link-viewusers">View Users</a>
+    	<a href="/addUser" id="nav-link-users">User Admin</a>
+    	<a href="/noun" id="nav-link-nouns">Noun Admin</a>
+		
+	</div>
+	
 	<div class="results-container">
 	  <h2>Test Results</h2>
 
