--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -25,7 +25,7 @@
 		<div id="welcome-container">
 			<img id="dragon" th:src="@{/images/dragon.png}" alt="Image of cartoon style dragon">
 			<div id="welcome">
-				<p>Welcome FORENAME!</p>
+				<p>Welcome <span th:text="${email}">FORENAME!</span></p>
 				<a href="/test" id="take-test-button">Take Test</a>
 			</div>
 		</div>
