--- a/src/main/resources/templates/add-user.html
+++ b/src/main/resources/templates/add-user.html
@@ -16,9 +16,9 @@
 		<a href="/home" id="nav-link-home">Welcome</a>
 		<a href="/test" id="nav-link-test">Take Test</a>
 		<a href="/viewResults" id="nav-link-results">View Results</a>
-		<a href="/viewusers" id="nav-link-viewusers">View Users</a>
-    	<a href="/addUser" id="nav-link-users" th:style="'color: red; background-color: white'">User Admin</a>
-    	<a href="/noun" id="nav-link-nouns">Noun Admin</a>
+    	<a th:if="${isAdmin}" href="/viewusers" id="nav-link-viewusers">View Users</a>
+    	<a th:if="${isAdmin}" href="/addUser" id="nav-link-users" th:style="'color: red; background-color: white'">User Admin</a>
+    	<a th:if="${isInstructor}" href="/noun" id="nav-link-nouns">Noun Admin</a>
 	</div>
 	
 	<div id="container">
