--- a/src/main/resources/templates/error/500.html
+++ b/src/main/resources/templates/error/500.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="author" content="cnb22xdk">
+	<meta name="author" content="grs22lkc">
 	<link href="../css/styles.css" th:href="@{/css/styles.css}" rel="stylesheet" />
-    <title>ERROR | Academi Gymraeg</title>
+    <title>Internal Server Error | Academi Gymraeg</title>
 </head>
 <body>
     <div id="header">
@@ -18,8 +18,8 @@
 		<div id="error-container">
 			<div id="errorpage">
 				<h1>:(</h1>
-				<h2>ERROR 404</h2>
-				<p>The requested page was not found on the server.</p>
+				<h2>ERROR 500</h2>
+				<p>An internal server error has occurred. Please contact an administrator.</p>
 				<a href="/home" id="home-button">Return Home</a>
 			</div>
 		</div>
