--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -16,16 +16,17 @@
 		<a href="/home" id="nav-link-home" th:style="'color: red; background-color: white'">Welcome</a>
 		<a href="/test" id="nav-link-test">Take Test</a>
 		<a href="/viewResults" id="nav-link-results">View Results</a>
-		<a href="/viewusers" id="nav-link-viewusers">View Users</a>
-    	<a href="/addUser" id="nav-link-users">User Admin</a>
-    	<a href="/noun" id="nav-link-nouns">Noun Admin</a>
+		<a th:if="${isAdmin}" href="/viewusers" id="nav-link-viewusers">View Users</a>
+    	<a th:if="${isAdmin}" href="/addUser" id="nav-link-users">User Admin</a>
+    	<a th:if="${isInstructor}" href="/noun" id="nav-link-nouns">Noun Admin</a>
 	</div>
 	
 	<div id="container">
 		<div id="welcome-container">
 			<img id="dragon" th:src="@{/images/dragon.png}" alt="Image of cartoon style dragon">
 			<div id="welcome">
-				<p>Welcome FORENAME!</p>
+				<p>Welcome <span th:text="${forename}"></span>!</p>
+				
 				<a href="/test" id="take-test-button">Take Test</a>
 			</div>
 		</div>
