--- a/src/main/resources/templates/useredit.html
+++ b/src/main/resources/templates/useredit.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="author" content="ptg22svs">
+	<meta name="author" content="ptg22svs, grs22lkc">
 	<link href="../css/styles.css" th:href="@{/css/styles.css}" rel="stylesheet" />
     <title>Academi Gymraeg | Edit User</title>
 </head>
@@ -12,56 +12,62 @@
 	    <img id="logo" th:src="@{/images/logo.png}" alt="Academi Gymraeg Logo">
 	    <a href="/viewusers" id="logout">Cancel </a>
 	</div>
-    <h1>User Admin</h1>
 	
-	<h2>Edit User</h2>
-	<form th:action="@{/edituser}" method="POST" th:object="${user}">
-		<input type="hidden" id="id" th:field="*{userId}"><br>
-			<div>
-				<label for="forename">Forename: </label>
-				<input type="text" id="forename" th:field="*{forename}"><br>		
-				<th:block th:each="e : ${#fields.errors('forename')}">
-					<span style="color: red">
-						<th:block th:text="${e}"></th:block>
-					</span>
-					<br />
-				</th:block>	
-			
-				<label for="emailaddress">Email Address: </label>
-				<input type="text" id="emailaddress" th:field="*{username}"><br>
-				<th:block th:each="e : ${#fields.errors('username')}">
-					<span style="color: red">
-						<th:block th:text="${e}"></th:block>
-					</span>
-				<br />
-				</th:block>		
-			</div><br>
-			
-			<div>
-				<label>
-		        	<input type="checkbox" th:field="*{admin}"/> Administrator
-		    	</label><br>
-		    	<label>
-		        	<input type="checkbox" th:field="*{instructor}"/> Instructor
-		    	</label><br><br>
-		    </div>
-		    <div>
-				<label for="password">Password: </label>
-				<input type="password" id="password" th:field="*{password}"><br>
-				<label for="password">Confirm password: </label>
-				<input type="password" id="confirmpassword" th:field="*{password}"><br>
-				<th:block th:each="e : ${#fields.errors('password')}">
-					<span style="color: red">
-						<th:block th:text="${e}"></th:block>
-					</span>
-				<br />
-				</th:block>		
-			</div><br><br>
-		
-		<button type="submit">Save changes</button>
-	</form><br><br>
+	<div id="container">
 	
+	    <h1>User Admin</h1>
 		
+		<h2>Edit User</h2>
+		
+		<div id="add-user-container">
+			<form th:action="@{/edituser}" method="POST" th:object="${user}">
+				<input type="hidden" id="id" th:field="*{userId}"><br>
+					<div>
+						<label for="forename">Forename: </label>
+						<input type="text" id="forename" th:field="*{forename}"><br><br>
+						<th:block th:each="e : ${#fields.errors('forename')}">
+							<span style="color: red">
+								<th:block th:text="${e}"></th:block>
+							</span>
+							<br />
+						</th:block>	
+					
+						<label for="emailaddress">Email Address: </label>
+						<input type="text" id="emailaddress" th:field="*{username}"><br>
+						<th:block th:each="e : ${#fields.errors('username')}">
+							<span style="color: red">
+								<th:block th:text="${e}"></th:block>
+							</span>
+						<br />
+						</th:block>		
+					</div><br>
+					
+					<div>
+						<label>Edit user role(s):</label>
+						<label>
+				        	<input type="checkbox" th:field="*{admin}"/> Administrator
+				    	</label>
+				    	<label>
+				        	<input type="checkbox" th:field="*{instructor}"/> Instructor
+				    	</label><br><br>
+				    </div>
+				    <div>
+						<label for="password">Password: </label>
+						<input type="password" id="password" th:field="*{password}"><br><br>
+						<label for="password">Confirm password: </label>
+						<input type="password" id="confirmpassword" th:field="*{password}"><br>
+						<th:block th:each="e : ${#fields.errors('password')}">
+							<span style="color: red">
+								<th:block th:text="${e}"></th:block>
+							</span>
+						<br />
+						</th:block>		
+					</div><br><br>
+				
+				<button type="submit">Save changes</button>
+			</form><br><br>
+		</div>
+	</div>	
 	
 	
 </body>
