--- a/src/main/resources/templates/nounedit.html
+++ b/src/main/resources/templates/nounedit.html
@@ -11,7 +11,7 @@
 	
 	<h2>Edit Noun</h2>
 	<form th:action="@{/noun/editnoun}" method="POST" th:object="${noun}">
-	<input type="hidden" id="id" th:field="*{id}"><br>
+	<input type="hidden" id="id" th:field="*{nounId}"><br>
 		<div>
 		<label for="englishnoun">English noun: </label>
 		<input type="text" id="englishnoun" th:field="*{englishNoun}"><br>
