Noun form styling

--- a/src/main/resources/templates/nounedit.html
+++ b/src/main/resources/templates/nounedit.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="author" content="ptg22svs">
+	<meta name="author" content="ptg22svs, grs22lkc">
+	<link href="../css/styles.css" th:href="@{/css/styles.css}" rel="stylesheet" />
     <title>Academi Gymraeg | Noun Admin</title>
 </head>
 <body>
+	<div id="header">
+	    <img id="logo" th:src="@{/images/logo.png}" alt="Academi Gymraeg Logo">
+	    <a href="/viewusers" id="logout">Cancel </a>
+	</div>
+	
     <h1>Noun Admin</h1>
 	
 	<h2>Edit Noun</h2>
