--- a/src/main/resources/templates/useredit.html
+++ b/src/main/resources/templates/useredit.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="author" content="ptg22svs, grs22lkc">
+	<meta name="author" content="ptg22svs, grs22lkc, jcj23xfb">
 	<link href="../css/styles.css" th:href="@{/css/styles.css}" rel="stylesheet" />
     <title>Academi Gymraeg | Edit User</title>
 </head>
@@ -20,11 +20,11 @@
 		<h2>Edit User</h2>
 		
 		<div id="add-user-container">
-			<form th:action="@{/edituser}" method="POST" th:object="${user}">
-				<input type="hidden" id="id" th:field="*{userId}"><br>
+			<form th:action="@{/edituser}" method="POST" th:object="${editUserDTO}">
+				<input type="hidden" th:field="*{userId}" /><br>
 					<div>
 						<label for="forename">Forename: </label>
-						<input type="text" id="forename" th:field="*{forename}"><br><br>
+						<input type="text" th:field="*{forename}" /><br><br>
 						<th:block th:each="e : ${#fields.errors('forename')}">
 							<span style="color: red">
 								<th:block th:text="${e}"></th:block>
@@ -33,7 +33,7 @@
 						</th:block>	
 					
 						<label for="emailaddress">Email Address: </label>
-						<input type="text" id="emailaddress" th:field="*{username}"><br>
+						<input type="text" th:field="*{username}" /><br>
 						<th:block th:each="e : ${#fields.errors('username')}">
 							<span style="color: red">
 								<th:block th:text="${e}"></th:block>
@@ -53,10 +53,11 @@
 				    </div>
 				    <div>
 						<label for="password">Password: </label>
-						<input type="password" id="password" th:field="*{password}"><br><br>
-						<label for="password">Confirm password: </label>
-						<input type="password" id="confirmpassword" th:field="*{password}"><br>
-						<th:block th:each="e : ${#fields.errors('password')}">
+						<input type="password" id="password" name="newPassword"><br><br>
+
+						<label for="confirmpassword">Confirm password: </label>
+						<input type="password" id="confirmpassword" name="confirmPassword"><br>
+						<th:block th:each="e : ${#fields.errors('newPassword')}">
 							<span style="color: red">
 								<th:block th:text="${e}"></th:block>
 							</span>
