--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -21,7 +21,7 @@
 				<a href="/test" id="nav-link-test" th:style="'color: red; background-color: white'">Take Test</a>
 				<a href="/viewResults" id="nav-link-results">View Results</a>
 				<a th:if="${isAdmin}" href="/viewusers" id="nav-link-viewusers">View Users</a>
-		    	<a th:if="${isAdmin}" href="/addUser" id="nav-link-users">User Admin</a>
+		    	<a th:if="${isAdmin}" href="/addUser" id="nav-link-users">Add User</a>
 		    	<a th:if="${isInstructor}" href="/noun" id="nav-link-nouns">Noun Admin</a>
 
             </div>
