--- a/src/main/resources/templates/viewusers.html
+++ b/src/main/resources/templates/viewusers.html
@@ -18,7 +18,7 @@
 		<a href="/test" id="nav-link-test">Take Test</a>
 		<a href="/viewResults" id="nav-link-results">View Results</a>
 		<a th:if="${isAdmin}" href="/viewusers" id="nav-link-viewusers" th:style="'color: red; background-color: white'">View Users</a>
-    	<a th:if="${isAdmin}" href="/addUser" id="nav-link-users">User Admin</a>
+    	<a th:if="${isAdmin}" href="/addUser" id="nav-link-users">Add User</a>
     	<a th:if="${isInstructor}" href="/noun" id="nav-link-nouns">Noun Admin</a>
 	</div>
 	
