--- a/src/main/resources/templates/nounadmin.html
+++ b/src/main/resources/templates/nounadmin.html
@@ -17,7 +17,7 @@
 		<a href="/test" id="nav-link-test">Take Test</a>
 		<a href="/viewResults" id="nav-link-results">View Results</a>
 		<a th:if="${isAdmin}" href="/viewusers" id="nav-link-viewusers">View Users</a>
-    	<a th:if="${isAdmin}" href="/addUser" id="nav-link-users">User Admin</a>
+    	<a th:if="${isAdmin}" href="/addUser" id="nav-link-users">Add User</a>
     	<a th:if="${isInstructor}" href="/noun" id="nav-link-nouns" th:style="'color: red; background-color: white'">Noun Admin</a>
 		
 	</div>
@@ -34,14 +34,14 @@
 			<form th:action="@{/noun}" method="POST" th:object="${noun}">
 				<div>
 				<label for="englishnoun">English noun: </label>
-				<input type="text" id="englishnoun" th:field="*{englishNoun}"><br>
+				<input type="text" id="englishnoun" th:field="*{englishNoun}" maxlength="64"><br>
 				<th:block th:each="e : ${#fields.errors('englishNoun')}">
 					<span style="color: red"><th:block
 							th:text="${e}"></th:block></span>
 					<br />
 				</th:block>
 				<label for="welshnoun">Welsh noun: </label>
-				<input type="text" id="welshnoun" th:field="*{welshNoun}"><br>	
+				<input type="text" id="welshnoun" th:field="*{welshNoun}" maxlength="64"><br>	
 				<th:block th:each="e : ${#fields.errors('welshNoun')}">
 					<span style="color: red"><th:block
 							th:text="${e}"></th:block></span>
