--- a/src/main/resources/templates/useredit.html
+++ b/src/main/resources/templates/useredit.html
@@ -24,7 +24,7 @@
 				<input type="hidden" th:field="*{userId}" /><br>
 					<div>
 						<label for="forename">Forename: </label>
-						<input type="text" th:field="*{forename}" /><br><br>
+						<input type="text" th:field="*{forename}" maxlength="64"/><br><br>
 						<th:block th:each="e : ${#fields.errors('forename')}">
 							<span style="color: red">
 								<th:block th:text="${e}"></th:block>
@@ -33,7 +33,7 @@
 						</th:block>	
 					
 						<label for="emailaddress">Email Address: </label>
-						<input type="text" th:field="*{username}" /><br>
+						<input type="text" th:field="*{username}" maxlength="320"/><br>
 						<th:block th:each="e : ${#fields.errors('username')}">
 							<span style="color: red">
 								<th:block th:text="${e}"></th:block>
@@ -53,10 +53,10 @@
 				    </div>
 				    <div>
 						<label for="password">Password: </label>
-						<input type="password" id="password" name="newPassword"><br><br>
+						<input type="password" id="password" name="newPassword" maxlength="256"><br><br>
 
 						<label for="confirmpassword">Confirm password: </label>
-						<input type="password" id="confirmpassword" name="confirmPassword"><br>
+						<input type="password" id="confirmpassword" name="confirmPassword" maxlength="256"><br>
 						<th:block th:each="e : ${#fields.errors('newPassword')}">
 							<span style="color: red">
 								<th:block th:text="${e}"></th:block>
