--- a/src/main/resources/templates/viewresults.html
+++ b/src/main/resources/templates/viewresults.html
@@ -19,7 +19,7 @@
 		<a href="/test" id="nav-link-test">Take Test</a>
 		<a href="/viewResults" id="nav-link-results" th:style="'color: red; background-color: white'">View Results</a>
 		<a th:if="${isAdmin}" href="/viewusers" id="nav-link-viewusers">View Users</a>
-    	<a th:if="${isAdmin}" href="/addUser" id="nav-link-users">User Admin</a>
+    	<a th:if="${isAdmin}" href="/addUser" id="nav-link-users">Add User</a>
     	<a th:if="${isInstructor}" href="/noun" id="nav-link-nouns">Noun Admin</a>
 		
 	</div>
