--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -87,8 +87,8 @@ a.delete-button {
 
 .back-link {
       display: inline-block;
-      margin-top: 20px;
-      background-color: green;
+      margin-top: 40px;
+      background-color: grey;
       color: white;
       padding: 10px 30px;
       text-decoration: none;
@@ -270,4 +270,25 @@ a.delete-button {
 	}
 #view-results table th {
 	width: 300px;
-}	
+}
+
+/* Flashing effect for the first result table row (if it exists) <tr> */
+#view-results table tr:nth-of-type(2) {
+    animation: flash 1s ease-in-out 5;
+    background-color: #ffcc00;
+}
+@keyframes flash {
+    0% { background-color: #ffcc00; }
+    50% { background-color: #ffff99; }
+    100% { background-color: #ffcc00; }
+}
+
+/* TAKE TEST PAGE SPECIFIC CSS */
+
+#submit-test {
+	background-color: green;
+	padding: 10px 40px;
+	color: white;
+	font-size: 18px;
+	margin-top: 15px;
+	}
